--- a/Javascripts.html
+++ b/Javascripts.html
@@ -27,6 +27,8 @@
               <th><h2><a href="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072">Rahmat_Bitmoji</a> <span id="1"></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_bitmoji/5600293337219072/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></span></th>
              <th> <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064">Rahmat_Dancing_Bitmoji</a><span id="2"></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></span></th>
                        </tr>
+                   <tr>
+                       <td><p><a href="https://www.khanacademy.org/computer-programming/rahmat_race_bitmoji/4977093884559360">Rahmat_Race_Bitmoji</a></p><script src="https://www.khanacademy.org/computer-programming/rahmat_race_bitmoji/4977093884559360/embed.js?editor=no&buttons=no&author=no&embed=yes"></script
                   </table>
             
     </body>
