--- a/Javascripts.html
+++ b/Javascripts.html
@@ -28,8 +28,9 @@
              <th> <h2><a href="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064">Rahmat_Dancing_Bitmoji</a><span id="2"></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_dancing_bitmoji/5472168456536064/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></span></th>
                        </tr>
                    <tr>
-                       <td><p><a href="https://www.khanacademy.org/computer-programming/rahmat_race_bitmoji/4977093884559360">Rahmat_Race_Bitmoji</a></p><script src="https://www.khanacademy.org/computer-programming/rahmat_race_bitmoji/4977093884559360/embed.js?editor=no&buttons=no&author=no&embed=yes"></script
-                  </table>
+                       <td><p><a href="https://www.khanacademy.org/computer-programming/rahmat_race_bitmoji/4977093884559360">Rahmat_Race_Bitmoji</a></p><script src="https://www.khanacademy.org/computer-programming/rahmat_race_bitmoji/4977093884559360/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+                  <td><a href="https://www.khanacademy.org/computer-programming/rahmat_racingbitmojifun/6584262618824704">Rahmat_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/rahmat_racingbitmojifun/6584262618824704/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+                           </table>
             
     </body>
 </html>
