--- a/finalProject.html
+++ b/finalProject.html
@@ -19,7 +19,7 @@
         </table>
        
        <div class="heading">
-            <h1>Welcome to Amir's Javascript Page </h1>
+            <h1>Welcome to Amir's Final Project Page </h1>
         </div>
            <p>This website has a collection of my Javascripts that I wrote in my CSC 106 class in URI<br></p>
                <table class="monkey" width=30%>
