--- a/finalProject.html
+++ b/finalProject.html
@@ -15,6 +15,7 @@
                             <td><a href="https://arahmat25.github.io/Javascripts.html"><img src="Javascripts.png" width="200"></a></td>
                             <td><a href="https://arahmat25.github.io/myapps.html"><img src="My-apps-real.png"width="200"></a></td>
                             <td><a href="https://arahmat25.github.io/AboutMe.html"><img src="real-about-me.png"width="200"></a></td>
+                       <td><a href="https://arahmat25.github.io/finalProject.html"><img src="finalProject.jpg"width="200"></a></td>
                 </tr>
         </table>
        
