--- a/finalProject.html
+++ b/finalProject.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Amir's Javascript Programming Portfolio</title>
+        <title>Amir's Final Project Programming Portfolio</title>
          <link rel="stylesheet" href="stylesheet.css">
       
     </head>
@@ -22,7 +22,7 @@
        <div class="heading">
             <h1>Welcome to Amir's Final Project Page </h1>
         </div>
-           <p>This website has a collection of my Javascripts that I wrote in my CSC 106 class in URI<br></p>
+           <p>This webpage has my final project for CSC 106. To play the game click start screen, to learn the rules, click how to playi, click the disclaimer button for a disclaimer, and click Scoring to understand the scoring of the game. Once you click Start game, you can click the spin button to roll the board, but it also takes away a coin. If 3 images match, you get coins based on the scoing system, and if you get to 0 coins, you lose.<br></p>
                <table class="monkey" width=30%>
                        <tr>
               <th><h2><a href="https://www.khanacademy.org/computer-programming/final-project/5888552539832320">Final Project</a></h2><script src="https://www.khanacademy.org/computer-programming/final-project/5888552539832320/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></th?
